--- a/c_s.html
+++ b/c_s.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cleansers & Serums</title>
     <link rel="stylesheet" type="text/css" href="routine_stylesheet.css"/> 
+    <style> 
+        #footer {
+            position: inherit;
+        }
+    </style>
 </head>
 <body>
    <nav id="test">
