--- a/routine.html
+++ b/routine.html
@@ -8,130 +8,18 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="routine_stylesheet.css"/>
         <title>Elizabet's Routine Page</title>
         <style>
-            #test {
-                color: white;
-                background-color: black;
-                display: flex;
-                justify-content: space-between;
+            #animation {
+                background-color: yellow;
+                animation-name: header-change;
+                animation-duration: 4s;
             }
 
-            #logo {
-                background-color: red;
-                align-items: center;
-                display: flex;
-                min-width: 40px;
-                padding: 10px;
-                font-family: 'Indie Flower', cursive;
-                font-size: 30px;
-            }
-
-            #footer li {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                color: white;
-                float: left;
-                font-family: 'Archivo', sans-serif;
-            }
-
-            #test li {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                color: white;
-                float: left;
-                font-family: 'Archivo', sans-serif;
-            }
-
-
-
-            li a, .dropbtn {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-
-            li a:hover, .dropdown:hover .dropbtn {
-                background-color: #0088ce;
-            }
-
-            li.dropdown {
-                display: inline-block;
-            }
-
-            .dropdown-content {
-                display: none; 
-                position: absolute;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            }
-
-            .dropdown-content a {
-                color: black;
-                padding: 12px 16px;
-                text-decoration: none;
-                display: block;
-                text-align: left;
-            }
-
-            .dropdown-content a:hover {
-                background-color: #e1e1e1;
-            }
-
-            .dropdown:hover .dropdown-content {
-                display: block;
-            }
-
-            #search-icon {
-                color: white;
-                width: 20px;
-                height: 20px;
-                background-color: rgb(0, 253, 232);
-                filter: invert(1);
-                background-size: contain;
-                }
-
-            #cart-icon {
-                color: white;
-                width: 20px;
-                height: 20px;
-                background-color: white;
-                filter: invert(1);
-                background-size: contain;
-            }
-
-            form {
-                display: inline-block;
-                min-width: 700px;
-            }
-
-            input {
-                display: inline;
-            }
-
-            #footer {
-                position: sticky;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: black;
-                color: white;
-                text-align: center;
-            }
-
-            #footer .dropdown-content {
-                bottom: 50px;
-            }
-
-            #searchbar {
-                padding: 20px;
+            @keyframes header-change {
+                from {background-color: yellow;}
+                to {background-color: red;}
             }
         </style>
     </head>
@@ -166,7 +54,7 @@
                 </div>
             </div>
         </nav>
-        <h1>Welcome to my Page all about Skincare!</h1>
+        <h1 id="animation">Welcome to my Page all about Skincare!</h1>
         <h2>I have learned a lot about skincare in the past two years through videos on social media and additional research online.</h2>
         <p>Feel free to navigate through my first html page styled with CSS. I am definitely a beginner who faced some struggles
             making this website. However, I have learned so much, and I know I will continue to expand my skills going forward. If you are
