--- a/c_s.html
+++ b/c_s.html
@@ -57,23 +57,23 @@
     <ol>
         <h3>Dry Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>Neutrogena Ultra Gentle Hydrating Cleanser</li>
+                <li>Cetaphil Gentle Skin Cleanser</li>
+                <li>CeraVe Hydrating Facial Cleanser</li>
             </ul>
         </h3> 
         <h3>Oily Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>First Aid Beauty Skin Rescue Deep Cleanser</li>
+                <li>CeraVe Foaming Facial Cleanser</li>
+                <li>Neutrogena Oil-Free Acne Wash</li>
             </ul>
         </h3>
         <h3>Combination Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>Kora Organics Foaming Cleanser</li>
+                <li>Cetaphil PRO Foaming Face Wash</li>
+                <li>Philosophy Purity Made Simple Facial</li>
             </ul>
         </h3>
     </ol>
@@ -91,9 +91,9 @@
                 chemically break down any impurities accumulated throughout the day.
             </h4>
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>SkinMedica AHA/BHA Cream</li>
+                <li>SkinCeuticals Glycolic Renewal Cleanser</li>
+                <li>The Ordinary AHA 30% + BHA 2% Peeling Solution</li>
             </ul>
         </h3> 
         <h3>Vitamin C
@@ -101,9 +101,9 @@
                 Vitamin C is a brightening serum that will bring a hydrating glowly look.
             </h4>
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>SkinCeuticals C E Ferulic</li>
+                <li>Drunk Elephant C-Firma Fresh Day Serum</li>
+                <li>Vichy LiftActiv Brightening Skin Corrector</li>
             </ul>
         </h3>
         <h3>Retinol
@@ -113,9 +113,9 @@
                 suggest using retinol solely on targeted areas.
             </h4>
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>RoC Retinol Correxion Anti-Aging Sensitive Skin Night Cream</li>
+                <li>The Inkey List Bakuchiol Retinol Alternative Moisturizer</li>
+                <li>Versed Press Restart Gentle Retinol Serum</li>
             </ul>
         </h3>
     </ol>
