--- a/m_s.html
+++ b/m_s.html
@@ -52,23 +52,23 @@
     <ol>
         <h3>Dry Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>Cetaphil Moisturizing Cream</li>
+                <li>Vanicream Moisturizing Skin Cream</li>
+                <li>La Roche-Posay Toleriane Double Repair Face Moisturizer</li>
             </ul>
         </h3> 
         <h3>Oily Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>Neutrogena Hydro Boost Gel-Cream</li>
+                <li>La Roche-Posay Effaclar Mat</li>
+                <li>Differin Oil Absorbing Moisturizer</li>
             </ul>
         </h3>
         <h3>Combination Skin
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>Dr. Dennis Oil-Free Moisture Cushion</li>
+                <li>CeraVe Daily Moisturizing Lotion</li>
+                <li>Kiehl's Moisturizer Cream</li>
             </ul>
         </h3>
     </ol>
@@ -77,7 +77,7 @@
         uncomfortable feeling on the skin, SPF is extremely important to keep skin looking healthy. 
         At the least, I encourage SPF be worn on days with more-than-normal sun exposure. However, if
         you find an SPF that makes your skin feel amazing, then this can become a daily addition to
-        your morning skincare routine. SPF can be categorized as either chemical, physical or a combination. 
+        your morning skincare routine. SPF can be categorized as either chemical, mineral/physical or a combination. 
         Both are effective. Chemical absorbs the UV rays and works it magic to minimize the harm caused by UV
         exposure. Chemical sunscreens are much less likely to cause a white-cast than physical sunscreens. 
         Physical sunscreens often are comprised of titanium or zinc oxide. For the most part, to find a SPF 
@@ -86,23 +86,16 @@
     <ol>
         <h3>Chemical
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>EltaMD UV Clear Broad-Spectrum SPF 46</li>
+                <li>La Roche-Posay Anthelios Clear-Skin Sunscreen</li>
+                <li>Supergoop! Unseen Sunscreen</li>
             </ul>
         </h3> 
-        <h3>Physical
+        <h3>Mineral
             <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
-            </ul>
-        </h3>
-        <h3>Combination
-            <ul>
-                <li>Cleanser 1</li>
-                <li>Cleanser 2</li>
-                <li>Cleanser 3</li>
+                <li>EltaMD Mineral SPF 50</li>
+                <li>Colorscience Sunforgettable Total Protection Brush-On Shield SPF 50</li>
+                <li>Supergoop! Mineral Matte SPF 40</li>
             </ul>
         </h3>
     </ol>
